<resources>
    <string name="women_safety">Women Safety</string>
    <string name="threat">Tips To Escape From Threat</string>
    <string name="tips">1. What should a woman do if she finds herself alone
        in the company of a stranger male as she prepares to
        enter a lift in a High Rise apartment late at night ....???\n\n

Experts Say : Enter the lift......if you need to reach the 13th floor,press all the buttons
        up to your destination. No one will dare attack you in a lift that stops on every floor.\n\n

        2. What to do if a stranger tries to attack you when you when you are alone in your in your house,run into the kitchen.\n\n

Experts Say : You alone know where the chilli powder and turmeric are kept.
        And where the knives and plates are. All these can be turned into deadly weapons.
        If nothing else, start throwing plates and utensils all over. Let them break.
        Scream...Remember that noise is the greatest enemy of a molester. He does not want to be caught.\n\n

        3. Taking an Auto or Taxi at night.\n\n

Experts Say : Before getting into an auto at night, note down its registration number.
        Then use the mobile to call your family or friend and pass on the details to them
        in the language the driver understands. Even if no one answers your call, pretend
        you are in a conversation. The driver now knows someone has his details and he will
        be in serious trouble if anything goes wrong. He is now bound to take you home safe
        and sound. A potential attacker is now de facto protector.\n\n


        4. What if the driver turns into a street he is not supposed too and you feel you are entering a danger zone...\n\n

Experts Say :  Use the handle of your purse or your stole (dupatta) to wrap around his
        neck and pull him back. Within seconds, he will feel chocked and helpless.
        In case you dont have a purse or stole just pull him back by his collar.
        The top button of his shirt would then do the same trick.\n\n

        5. If you are stalked at night...

Expert Say : Enter a shop or a house and explain your predicament. If it is night
        and shops are not open, go inside an ATM box. ATM centres always have
        close circuit television.Fearing
       identification, no one will dare attack you.\n\n

After all, being mentally alert is the greatest weapon you can ever have.</string>
    <string name="tips_regarding_women_safety">Tips Regarding Women Safety</string>
    <string name="paragraph">1. Woman must have all the emergency numbers with them and WhatsApp also if possible so that they can immediately tell to their family member and police.\n\n
2. Hold your bag as tightly as you can when you are taking public transport. You can use it to hit your predator.\n\n
3. When you are walking on a road,  keep your mobile phone handy but avoid using it. Being on the phone makes you less alert.\n\n
4. When you are travelling in an auto alone, make sure you share the auto number with someone in your family even if its during the day.\n\n
5. Similarly, if you have booked a cab, always share your coordinates with someone.\n\n
6. When in office, avoid going to isolated areas with no CCTV cameras.\n\n
7. If you have parked your car, always look underneath, especially at night or at less-crowded area.\n\n
Very Important\n\n
8. Whenever you are posting anything on social media, make sure you dont do it in real-time. Because if you do, you are telling people on your social media about your whereabouts. Delay those posts by say, 20-30 minutes.\n\n
9. Always ensure you are not posting anything  on your social media with your address or phone number on it.\n\n
10. Whenever you are giving out order for delivery at a grocery store, make sure you whisper your address or write it down somewhere and give it to the shopkeeper. Never announce it.\n\n
11. Whenever you are getting your phone recharged, if its at a store, dont loudly speak up your phone number.\n\n
12. Always pour your own drinks at parties and dont ever take drinks from complete strangers or even friends. If you have left your drink unattended for even a few minutes, leave it and get a fresh drink. It may have been spiked when you weren not looking.\n\n
13. If you feel someone is stalking you, try to find a crowded place and call someone for help.\n\n
14. Self defence techniques are the first and foremost thing to which end and every woman must be aware of and get proper self-defence training for their safety. They must be aware of some effective defences techniques such as kicks to groin, blocking punches, etc.\n\n
15. Generally most of the women are gifted with sixth sense which they must use whenever they become in some problem. They should  at once avoid any situation which they feel bad for them.\n\n
16. Escape and run is also a good way to reduce some risks of women whenever they become in problem. They should never go with any unknown person alone at some unknown places.\n\n
17. Women must understand and feel their physical power and use accordingly. They never feel themselves weak than men and take some self defence training.\n\n
18. They should be careful while communicating with someone on internet in the cyberspace.\n\n
19. Pepper spray can also be proved as a useful self-defence tool however it has a drawback that some people cannot be harmed through it even after full-face spray. it may not stop the attacker so women should not dpend on it completely and use other techniques also.\n\n
20. Women should be very conscious while driving the car and going to any trip. They must lock all the doors of car while traveling with own or private car.</string>
    <string name="laws">The Indian Penal Code, 1860, lays down the provisions to penalise the culprit for the heinous offences against women. Various sections under IPC specifically deals with such crimes.</string>
    <string name="murder">Murder,Dowry death,Abetment Of Suicide,etc. (Sections 302,304B and 306)</string>
    <string name="cruelity">Cruelty by husband or his relatives (Section 498A)</string>
    <string name="outraging">Outraging the modesty of women (Section 354)</string>
    <string name="sexual">Sexual harassment (Section 354A)</string>
    <string name="assault">Assault on women with intent to dirobe a woman (Sections 354B)</string>
    <string name="voyeurism">Voyeurism (Section 354C)</string>
    <string name="stalking">Stalking (Section 354C)</string>
    <string name="word">Word, gesture or act intended to insult the modesty of a woman (Section 509)</string>
    <string name="kidnapping">Kidnapping and abduction for different purposes (Sections 363-373)</string>
    <string name="rape">Rape (Section 375,376,376A,376B,376C,376D and 376E)</string>
    <string name="acid">Acid Attack (Section 326A and 326B)</string>
    <string name="Acid_Attack">Acid Attack (Sections 326A and 326B)</string>
    <string name="acid_law">The Criminal Law ( Amendment ) Act, 2013 incorporated Section 326A and 326B with an itend to make specific provision for punishment in the case of acid attack.\n\n
Section 326A focuses on voluntarily causing grievous hurt by using acid. In the view of this section, whoseever  causes permanent or partial damage or burns, disfigures or disbles any part of the body of a person or causes grievous hurt by throwing or adminstering acid with an intention to cause such imprisonment of at least ten years which may extend to life imprisonment with fine.\n\n
Section 326B has more legislative focus on the act of throwing or attempting to throw acid with the intention of causing grievous hurt. The punishment under this section is imprisonment of not less than five years with fine which may extend upto seven years.\n\n
Essential ingredients of Acid Attack\n
The following are the requisites of an acid attack-\n\n
1. Permanent/partial damage /deformity/burn/idfigure/disable any part of the body of any person; or\n\n
2. Grievous hurt by throwing acid; or\n\n
3. By using any other means;\n\n
4.  There must be an intention to cause injury or hurt. </string>
    <string name="rape_law">Rape (Section 375, 376, 376A, 376B, 376C, 376D and 376E)</string>
    <string name="rape_laws">Section 375, IPC defines rape. In simple terms, the offence of rape is the ravishment of a women, without her consent, by force, fraud or fear. In other words , it is the carnal knowledge ( penetration of any of the slightest degree of the male orrgan of reproduction ) of any woman by force against her will. It is an obnoxious act of highest degree which violates the right to privacy and sanctity of a female. Apart from being a dehumanising and perverted act, it is also an unlawful interference in the personal life of a woman which is an intense blow on the honour, dignity, reputation and self-esteem of a woman. This outrageous crime not only cause physical injury to the victim but also humiliates, degrades and leaves a scar on the most precious jewel of a woman i.e. her character and dignity.\n\n
Essential Ingredients Of Rape\n\n
        Section 375 has the following two essential ingredient-\n\n
1. Actus Reus: There must be sexual intercourse, as understood in terms of the provisions of Section 375 (a) to (d), with a woman by a man.\n\n
2. Mens Rea: The sexual intercourse must be under any of the circumstances as given under Section 375.\n\n
 Punishment for Rape (Section 376)\n\n
1.Section 376 provides punishment for committing the heinous crime of rape. This section is divided into two sub-sections.\n\n
2.Section 376(1) provides a minimum sentence of seven years of imprisonment that may extend to life imprisonment and fine.\n\n
3. Section 376(2) provides punishment not less than ten years of imprisonment but may extend to imprisonment for life or death or fine.\n\n
  Gang Rape ( Section 376D )\n
Section 376D lays down the punishment for gang rape. Where a woman is raped by more than one person acting in furtherance of a common intention, each of them shall be liable for the offence of rape and shall be punished with rigorous imprisonment for not less thantwenty years which may extend to lifetime imprisonment and fine.</string>
    <string name="kidnapping_law">Kidnapping And Abduction For Different Purposes (Sections 363-373)</string>
    <string name="para">Section 363 in the Indian Penal Code punishment for kidnapping. - Whoever kidnaps any person from India or from lawful guardianship shall be punished imprisonment of either description for a term which may extend to seven years, and shall also be liable to fine\n\n
Section 373 in the Indian Penal Code buying minor of purposes of prostitution, etc.\n
-Whoever buys, hires or otherwise obtains possession of any\n\n
1. [person under the age if eighteen years wuth intent that such person shall at any age beemployed or used for the purpose of prostitution or illicit intercourse with any person or for any unlawful and immoral purpose, of knowing it to be likely that such person will at any age be] employed or used for any purpose, shall be punished imprisonment of either desciption for a term which may extend to ten years, and shall also be liable to fine.\n\n
2. [Explanation 1. - Any prostitute or any person keeping or managing a brothel, who buys, hires or otherwise obtains possession of a female under the age of 18 year shall, until the contrary is proved, be presumed to have obtained possession of such female with the intent that she shall be used for the purpose of prostitution.</string>
</resources>